--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
 /* Hero Section */
 .hero {
   height: 80vh;
-  background-image: url("https://images.unsplash.com/photo-1598091383021-15ddea10925d?auto=format&fit=crop&q=80&w=2070");
+  background-image: url("https://www.myoksha.com/wp-content/uploads/2015/08/Tirumala-Tirupati-Balaji-Temple.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
